# v4l2-stream

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  compile_commands.json  conanfile.txt
cmake/: dependencies.cmake  package.cmake
cmake/deb/: postinst  postrm  prerm  v4l2-stream.service
conf/: rpi-pipeline.json  uvc.json
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt
libs/algorithms/include/algorithms/: awb.h
libs/encoder/: CMakeLists.txt
libs/encoder/include/encoder/: encoder.h  mjpeg_encoder.h
libs/encoder/src/: encoded_parts.cpp  encoded_parts.h  mjpeg_encoder.cpp
libs/http-server/: CMakeLists.txt
libs/http-server/include/http-server/: http-server.h
libs/http-server/src/: http-server.cpp  request.cpp  request.h  responsewriter.cpp  responsewriter.h  route.cpp  route.h
libs/metrics/: CMakeLists.txt
libs/metrics/include/metrics/: metrics.h
libs/metrics/src/: metrics.cpp
libs/pipeline/: CMakeLists.txt
libs/pipeline/include/pipeline/: config.h  loader.h  pipeline.h
libs/pipeline/src/: algorithm.cpp  algorithm.h  bcm2835-isp-decoder.cpp  bcm2835-isp-decoder.h  config.cpp  decoder.cpp  decoder.h  decoders.cpp  decoders.h  feedback.cpp  feedback.h  loader.cpp  metadata.h  pipeline.cpp  pipeline_impl.h  rpi-agc.cpp  rpi-awb.cpp  rpi-denoise.cpp  rpi-sharpen.cpp
libs/pipeline/src/decoders/: bcm2835-isp-decoder.cpp  bcm2835-isp-decoder.h
libs/pipeline/test/: pipeline_test.cpp
libs/v4l/: CMakeLists.txt
libs/v4l/include/v4l/: v4l.h  v4l_bridge.h  v4l_caps.h  v4l_capture.h  v4l_codec.h  v4l_controls.h  v4l_device.h  v4l_exception.h  v4l_frame.h  v4l_framesize.h  v4l_meta_cap.h  v4l_output.h  v4l_stream.h
libs/v4l/src/: util.cpp  util.h  v4l_bridge.cpp  v4l_caps.cpp  v4l_capture.cpp  v4l_controls.cpp  v4l_device.cpp  v4l_exception.cpp  v4l_framesize.cpp  v4l_meta_cap.cpp  v4l_output.cpp  v4l_stream.cpp
v4l2-stream/: CMakeLists.txt
v4l2-stream/src/: ctrls.cpp  ctrls.h  main.cpp  metrics.cpp  metrics.h  query-params.h  selection.cpp  selection.h  snapshot.cpp  snapshot.h  stream.cpp  stream.h
web/: index.html  script.js  styles.css
