cmake_minimum_required(VERSION 3.23)
project(v4l2-stream VERSION 0.0.0)
if(BUILD_VERSION)
  project(v4l2-stream VERSION ${BUILD_VERSION})
endif()
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-psabi")
set(CMAKE_CXX_FLAGS_DEBUG
    "${CMAKE_CXX_FLAGS_DEBUG} -DASIO_ENABLE_HANDLER_TRACKING")
set(CMAKE_CXX_FLAGS "-fcoroutines")
include(cmake/dependencies.cmake)
include(cmake/package.cmake)
add_subdirectory(libs)
add_subdirectory(v4l2-stream)

message(STATUS "Project ${PROJECT_NAME}")
message(STATUS "Version ${CMAKE_PROJECT_VERSION}")
